# project-euler

rust/: Cargo.toml
rust/src/: lib.rs  p001.rs  p002.rs  p003.rs  p004.rs  p007.rs
