[package]
name = "project-euler-rust"
version = "0.1.0"
authors = ["Drew Dowling <drewdowling37@gmail.com>"]
autobins = false

[dependencies]
rand = "*"
num = "*"
primal = "*"

[dev-dependencies]
cargo-watch = "*"
pretty_assertions = "*"
unreachable = "1.0.0"
quickcheck = "*"
#quickcheck_macros = "*"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "p001"
path = "src/p001.rs"

[[bin]]
name = "p002"
path = "src/p002.rs"

[[bin]]
name = "p003"
path = "src/p003.rs"